<resources>
    <string name="app_name">Logical Thinking</string>
    <string name="welcome">Welcome</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="logintext">Welcome back.Log in to continue</string>
    <string name="skip">Skip</string>
    <string name="login">Log In</string>
    <string name="enter_your_email">Email</string>
    <string name="nameenter">Name</string>
    <string name="enter_your_password">Password</string>
    <string name="loginbutton">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>