<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:id="@+id/btnBack"
            android:src="@drawable/ic_back"
            android:layout_height="@dimen/_25sdp"/>
        <TextView
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:fontFamily="@font/rbold"
            android:textSize="@dimen/_18ssp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/logintext"
            android:textColor="@color/lightblack"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/rmedium"
            android:textSize="@dimen/_11ssp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_85sdp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/enter_your_email"
                android:id="@+id/edtEmail"
                android:textColor="@color/black"
                android:fontFamily="@font/rmedium"
                android:textSize="@dimen/_12ssp"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/enter_your_password"
                android:textColor="@color/black"
                android:fontFamily="@font/rmedium"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="@dimen/_115sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:id="@+id/btnLogin"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingHorizontal="@dimen/_6sdp"
                android:textSize="@dimen/_11ssp"
                android:background="@drawable/background_button_blue"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/loginbutton"

                android:layout_height="wrap_content">


            </Button>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnSignup"
            android:layout_marginBottom="@dimen/_14sdp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="or"

                android:textColor="@color/lightblack"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/rmedium"
                android:textSize="@dimen/_11ssp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="Sign up"
                android:layout_marginLeft="@dimen/_4sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/rbold"
                android:textSize="@dimen/_11ssp"
                android:layout_height="wrap_content"/>
        </LinearLayout>





    </RelativeLayout>


</LinearLayout>