<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".auth.SignupActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_75sdp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <View
                android:layout_width="@dimen/_150sdp"
                android:background="@color/black"
                android:layout_height="@dimen/_1sdp"/>

            <View
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_width="@dimen/_20sdp"
                android:background="@color/black"
                android:layout_height="@dimen/_1sdp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:fontFamily="@font/rbold"
                android:textSize="@dimen/_20ssp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="Welcome back.Sign up to continue"
                android:textColor="@color/lightblack"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/rmedium"
                android:textSize="@dimen/_10ssp"
                android:layout_height="wrap_content"/>


        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/_85sdp"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/nameenter"
                    android:id="@+id/edtName"
                    android:fontFamily="@font/rmedium"
                    android:textSize="@dimen/_12ssp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:layout_marginVertical="@dimen/_7sdp"

                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/enter_your_email"
                    android:id="@+id/edtEmail"
                    android:textColor="@color/black"
                    android:layout_marginVertical="@dimen/_7sdp"

                    android:fontFamily="@font/rmedium"
                    android:textSize="@dimen/_12ssp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/enter_your_password"
                    android:textColor="@color/black"
                    android:fontFamily="@font/rmedium"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginVertical="@dimen/_7sdp"
                    android:id="@+id/edtPassword"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="@dimen/_115sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:id="@+id/btnSignup"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingHorizontal="@dimen/_6sdp"
                    android:textSize="@dimen/_11ssp"
                    android:background="@drawable/background_button_blue"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:text="@string/sign_up"

                    android:layout_height="wrap_content">


                </Button>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_14sdp"
                android:paddingBottom="@dimen/_25sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/rmedium"
                    android:text="or"
                    android:textColor="@color/lightblack"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/rbold"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>





        </RelativeLayout>

    </LinearLayout>

</LinearLayout>